--- a/docs/themes/redwood/i18n/en.toml
+++ b/docs/themes/redwood/i18n/en.toml
@@ -13,5 +13,21 @@ other = "Go to homepage"
 [edit-this-page]
 other = "Edit this page"
 
+[table-of-contents]
+other = "Table of Contents"
+
 [menu-shortcuts-title]
 other = "More"
+
+[menu-settings-title]
+other = "Settings"
+
+[menu-settings-theme]
+other = "Theme"
+
+[menu-settings-theme-dark]
+other = "Dark"
+
+[menu-settings-theme-light]
+other = "Light"
+
